vei nn funcionou o balanceamento ?

--- a/Códigos/6_balanceamento.ipynb
+++ b/Códigos/6_balanceamento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "41c601ee",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "bb166e30",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "1b64f1e8",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e83ecafb-1849-455d-9fcd-ca3f173eae22",
+       "ref": "a3b653f1-e796-49fa-beb7-8d6417b9f648",
        "rows": [
         [
          "0",
@@ -3093,7 +3093,7 @@
        "[24318 rows x 46 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "d160b815",
    "metadata": {},
    "outputs": [],
@@ -3122,7 +3122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "947ba102",
    "metadata": {},
    "outputs": [
@@ -3132,7 +3132,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "ff68d119",
    "metadata": {},
    "outputs": [],
@@ -3179,7 +3179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "8832d325",
    "metadata": {},
    "outputs": [],
@@ -3190,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "8e061c21",
    "metadata": {},
    "outputs": [],
@@ -3200,7 +3200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "fc367236",
    "metadata": {},
    "outputs": [
@@ -3440,7 +3440,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c155a382-5b47-47fe-959c-89903f19f759",
+       "ref": "bd4d292b-be92-4fb7-8f6b-025f096ccde2",
        "rows": [
         [
          "0",
@@ -6216,7 +6216,7 @@
        "[24318 rows x 45 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6227,7 +6227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "b0598d40",
    "metadata": {},
    "outputs": [
@@ -6248,7 +6248,7 @@
        "Name: Q06306, Length: 24318, dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6259,7 +6259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "b300a1b3",
    "metadata": {},
    "outputs": [
@@ -6269,7 +6269,7 @@
        "(24318,)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6280,7 +6280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "fa6a07f4",
    "metadata": {},
    "outputs": [],
@@ -6290,7 +6290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "8da2e5ca",
    "metadata": {},
    "outputs": [
@@ -6300,7 +6300,7 @@
        "(17022, 45)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6311,7 +6311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "3ef9b968",
    "metadata": {},
    "outputs": [
@@ -6321,7 +6321,7 @@
        "(7296, 45)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6332,7 +6332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "id": "a1dc8f68",
    "metadata": {},
    "outputs": [
@@ -6572,7 +6572,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8cf8c488-5dcf-4c1d-94c8-34a1604a97f4",
+       "ref": "cddd75c5-bde6-47f1-82ac-bd9036da99fa",
        "rows": [
         [
          "1227",
@@ -9348,7 +9348,7 @@
        "[7296 rows x 45 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9359,7 +9359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "3e5feef6",
    "metadata": {},
    "outputs": [
@@ -9380,7 +9380,7 @@
        "Name: Q06306, Length: 17022, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9391,7 +9391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 17,
    "id": "d0ca4626",
    "metadata": {},
    "outputs": [
@@ -9412,7 +9412,7 @@
        "Name: Q06306, Length: 7296, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9423,7 +9423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 18,
    "id": "a3129113",
    "metadata": {},
    "outputs": [
@@ -9436,7 +9436,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9447,7 +9447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "id": "b99e1c9c",
    "metadata": {},
    "outputs": [
@@ -9460,7 +9460,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9471,7 +9471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "id": "45dc7dbf",
    "metadata": {},
    "outputs": [],
@@ -9481,12 +9481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 21,
    "id": "f52a8004",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savez('../Bases/Criados/Treino_Teste/treino_teste.npz', X_treino=X_treino, X_teste=X_teste, y_treino=y_treino, y_teste=y_teste, feature_names=X_treino.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "74a49270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.to_csv(\"../Bases/Criados/Treino_Teste/treino_teste.csv\", index=False)"
    ]
   },
   {
@@ -9499,10 +9509,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "id": "1214c493",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] O sistema não pode encontrar o arquivo especificado\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "        \"wmic CPU Get NumberOfCores /Format:csv\".split(),\n",
+      "        capture_output=True,\n",
+      "        text=True,\n",
+      "    )\n",
+      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\subprocess.py\", line 556, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ~~~~~^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\subprocess.py\", line 1038, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        pass_fds, cwd, env,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<5 lines>...\n",
+      "                        gid, gids, uid, umask,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        start_new_session, process_group)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\subprocess.py\", line 1550, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
+      "                             # no special security\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<4 lines>...\n",
+      "                             cwd,\n",
+      "                             ^^^^\n",
+      "                             startupinfo)\n",
+      "                             ^^^^^^^^^^^^\n"
+     ]
+    }
+   ],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "smote = SMOTE(random_state=42)\n",
@@ -9511,12 +9561,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "id": "2204da0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savez('../Bases/Criados/Treino_Teste/over.npz', X_treino=X_resampled, X_teste=X_teste, y_treino=y_resampled, y_teste=y_teste, feature_names=X_treino.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ad889f91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.to_csv(\"../Bases/Criados/Treino_Teste/over.csv\", index=False)"
    ]
   },
   {
@@ -9529,7 +9589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 26,
    "id": "7f205ab9",
    "metadata": {},
    "outputs": [],
@@ -9541,12 +9601,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 27,
    "id": "f6ffe6e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savez('../Bases/Criados/Treino_Teste/under.npz', X_treino=X_under, X_teste=X_teste, y_treino=y_under, y_teste=y_teste, feature_names=X_treino.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6665bb90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.to_csv(\"../Bases/Criados/Treino_Teste/under.csv\", index=False)"
    ]
   },
   {
@@ -9559,7 +9629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 29,
    "id": "b88cb533",
    "metadata": {},
    "outputs": [],
@@ -9571,12 +9641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 30,
    "id": "8ad7fd0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savez('../Bases/Criados/Treino_Teste/random.npz', X_treino=X_resampled, X_teste=X_teste, y_treino=y_resampled, y_teste=y_teste, feature_names=X_treino.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "09dd5675",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.to_csv(\"../Bases/Criados/Treino_Teste/random.csv\", index=False)"
    ]
   },
   {
@@ -9589,7 +9669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 32,
    "id": "f972f354",
    "metadata": {},
    "outputs": [],
@@ -9600,7 +9680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 33,
    "id": "6ce1080c",
    "metadata": {},
    "outputs": [
@@ -9845,7 +9925,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "89dd1eb4-31ca-4fa6-8012-393316c4cdcb",
+       "ref": "8ec35fe2-ff74-46a1-885f-67470147ef34",
        "rows": [
         [
          "0",
@@ -12671,7 +12751,7 @@
        "[24318 rows x 46 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12682,7 +12762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 34,
    "id": "21e52a6c",
    "metadata": {},
    "outputs": [],
@@ -12694,12 +12774,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 35,
    "id": "41169f75",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savez('../Bases/Criados/Treino_Teste/dsto.npz', X_treino=X_resampled, X_teste=X_teste, y_treino=y_resampled, y_teste=y_teste, feature_names=X_treino.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2ce34694",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.to_csv(\"../Bases/Criados/Treino_Teste/dsto.csv\", index=False)"
    ]
   }
  ],
