eu sou burra e nn aguento mais

--- a/Códigos/6_balanceamento.ipynb
+++ b/Códigos/6_balanceamento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "id": "41c601ee",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "id": "bb166e30",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 106,
    "id": "1b64f1e8",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a3b653f1-e796-49fa-beb7-8d6417b9f648",
+       "ref": "e27302b8-63d2-4212-ba2b-6dd8e67aea0e",
        "rows": [
         [
          "0",
@@ -3093,7 +3093,7 @@
        "[24318 rows x 46 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 107,
    "id": "d160b815",
    "metadata": {},
    "outputs": [],
@@ -3122,7 +3122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 108,
    "id": "947ba102",
    "metadata": {},
    "outputs": [
@@ -3132,7 +3132,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 109,
    "id": "ff68d119",
    "metadata": {},
    "outputs": [],
@@ -3179,7 +3179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "id": "8832d325",
    "metadata": {},
    "outputs": [],
@@ -3190,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 111,
    "id": "8e061c21",
    "metadata": {},
    "outputs": [],
@@ -3200,7 +3200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 112,
    "id": "fc367236",
    "metadata": {},
    "outputs": [
@@ -3440,7 +3440,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "bd4d292b-be92-4fb7-8f6b-025f096ccde2",
+       "ref": "1252d2bd-db14-4f25-85fa-749b34b2c563",
        "rows": [
         [
          "0",
@@ -6216,7 +6216,7 @@
        "[24318 rows x 45 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6227,7 +6227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 113,
    "id": "b0598d40",
    "metadata": {},
    "outputs": [
@@ -6248,7 +6248,7 @@
        "Name: Q06306, Length: 24318, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6259,7 +6259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "id": "b300a1b3",
    "metadata": {},
    "outputs": [
@@ -6269,7 +6269,7 @@
        "(24318,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6280,7 +6280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 115,
    "id": "fa6a07f4",
    "metadata": {},
    "outputs": [],
@@ -6290,7 +6290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 116,
    "id": "8da2e5ca",
    "metadata": {},
    "outputs": [
@@ -6300,7 +6300,7 @@
        "(17022, 45)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6311,7 +6311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "id": "3ef9b968",
    "metadata": {},
    "outputs": [
@@ -6321,7 +6321,7 @@
        "(7296, 45)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6332,7 +6332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "id": "a1dc8f68",
    "metadata": {},
    "outputs": [
@@ -6572,7 +6572,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "cddd75c5-bde6-47f1-82ac-bd9036da99fa",
+       "ref": "1a557627-4947-4e8b-a9e2-6e4c26cdec34",
        "rows": [
         [
          "1227",
@@ -9348,7 +9348,7 @@
        "[7296 rows x 45 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9359,7 +9359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
    "id": "3e5feef6",
    "metadata": {},
    "outputs": [
@@ -9380,7 +9380,7 @@
        "Name: Q06306, Length: 17022, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9391,7 +9391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 120,
    "id": "d0ca4626",
    "metadata": {},
    "outputs": [
@@ -9412,7 +9412,7 @@
        "Name: Q06306, Length: 7296, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9423,7 +9423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 121,
    "id": "a3129113",
    "metadata": {},
    "outputs": [
@@ -9436,7 +9436,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9447,7 +9447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 122,
    "id": "b99e1c9c",
    "metadata": {},
    "outputs": [
@@ -9460,7 +9460,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9471,7 +9471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 123,
    "id": "45dc7dbf",
    "metadata": {},
    "outputs": [],
@@ -9481,7 +9481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 124,
    "id": "f52a8004",
    "metadata": {},
    "outputs": [],
@@ -9491,12 +9491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "74a49270",
+   "execution_count": 125,
+   "id": "0547bb75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base.to_csv(\"../Bases/Criados/Treino_Teste/treino_teste.csv\", index=False)"
+    "df_treino_original = pd.concat([X_treino.reset_index(drop=True), y_treino.reset_index(drop=True)], axis=1)\n",
+    "df_teste_original = pd.concat([X_teste.reset_index(drop=True), y_teste.reset_index(drop=True)], axis=1)\n",
+    "\n",
+    "df_treino_original.to_csv(\"../Bases/Criados/Treino_Teste/treino.csv\", index=False)\n",
+    "df_teste_original.to_csv(\"../Bases/Criados/Treino_Teste/teste.csv\", index=False)"
    ]
   },
   {
@@ -9509,50 +9513,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 126,
    "id": "1214c493",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
-      "[WinError 2] O sistema não pode encontrar o arquivo especificado\n",
-      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
-      "  warnings.warn(\n",
-      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
-      "    cpu_info = subprocess.run(\n",
-      "        \"wmic CPU Get NumberOfCores /Format:csv\".split(),\n",
-      "        capture_output=True,\n",
-      "        text=True,\n",
-      "    )\n",
-      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\subprocess.py\", line 556, in run\n",
-      "    with Popen(*popenargs, **kwargs) as process:\n",
-      "         ~~~~~^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\subprocess.py\", line 1038, in __init__\n",
-      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
-      "    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "                        pass_fds, cwd, env,\n",
-      "                        ^^^^^^^^^^^^^^^^^^^\n",
-      "    ...<5 lines>...\n",
-      "                        gid, gids, uid, umask,\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "                        start_new_session, process_group)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\llays\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\subprocess.py\", line 1550, in _execute_child\n",
-      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
-      "                       ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
-      "                             # no special security\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^^\n",
-      "    ...<4 lines>...\n",
-      "                             cwd,\n",
-      "                             ^^^^\n",
-      "                             startupinfo)\n",
-      "                             ^^^^^^^^^^^^\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "smote = SMOTE(random_state=42)\n",
@@ -9561,7 +9525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 127,
    "id": "2204da0f",
    "metadata": {},
    "outputs": [],
@@ -9571,12 +9535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "ad889f91",
+   "execution_count": 128,
+   "id": "15059468",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base.to_csv(\"../Bases/Criados/Treino_Teste/over.csv\", index=False)"
+    "df_over = pd.concat([pd.DataFrame(X_resampled, columns=X_treino.columns),\n",
+    "                     pd.DataFrame(y_resampled, columns=['Q06306'])], axis=1)\n",
+    "df_over.to_csv(\"../Bases/Criados/Treino_Teste/over.csv\", index=False)"
    ]
   },
   {
@@ -9589,7 +9555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 129,
    "id": "7f205ab9",
    "metadata": {},
    "outputs": [],
@@ -9601,7 +9567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 130,
    "id": "f6ffe6e8",
    "metadata": {},
    "outputs": [],
@@ -9611,12 +9577,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "6665bb90",
+   "execution_count": 131,
+   "id": "985d418c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base.to_csv(\"../Bases/Criados/Treino_Teste/under.csv\", index=False)"
+    "df_under = pd.concat([pd.DataFrame(X_under, columns=X_treino.columns),\n",
+    "                      pd.DataFrame(y_under, columns=['Q06306'])], axis=1)\n",
+    "df_under.to_csv(\"../Bases/Criados/Treino_Teste/under.csv\", index=False)"
    ]
   },
   {
@@ -9629,7 +9597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 132,
    "id": "b88cb533",
    "metadata": {},
    "outputs": [],
@@ -9641,7 +9609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 133,
    "id": "8ad7fd0b",
    "metadata": {},
    "outputs": [],
@@ -9651,12 +9619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "09dd5675",
+   "execution_count": 134,
+   "id": "47745367",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base.to_csv(\"../Bases/Criados/Treino_Teste/random.csv\", index=False)"
+    "df_random = pd.concat([pd.DataFrame(X_resampled, columns=X_treino.columns),\n",
+    "                       pd.DataFrame(y_resampled, columns=['Q06306'])], axis=1)\n",
+    "df_random.to_csv(\"../Bases/Criados/Treino_Teste/random.csv\", index=False)"
    ]
   },
   {
@@ -9669,7 +9639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 135,
    "id": "f972f354",
    "metadata": {},
    "outputs": [],
@@ -9680,7 +9650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 136,
    "id": "6ce1080c",
    "metadata": {},
    "outputs": [
@@ -9925,7 +9895,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8ec35fe2-ff74-46a1-885f-67470147ef34",
+       "ref": "c1e7dae4-757c-41c1-a823-973a74bed04a",
        "rows": [
         [
          "0",
@@ -12751,7 +12721,7 @@
        "[24318 rows x 46 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12762,7 +12732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 137,
    "id": "21e52a6c",
    "metadata": {},
    "outputs": [],
@@ -12774,7 +12744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 138,
    "id": "41169f75",
    "metadata": {},
    "outputs": [],
@@ -12784,12 +12754,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "2ce34694",
+   "execution_count": 139,
+   "id": "4ccd9c42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base.to_csv(\"../Bases/Criados/Treino_Teste/dsto.csv\", index=False)"
+    "df_dsto = pd.concat([pd.DataFrame(X_resampled, columns=X_treino.columns),\n",
+    "                     pd.DataFrame(y_resampled, columns=['Q06306'])], axis=1)\n",
+    "df_dsto.to_csv(\"../Bases/Criados/Treino_Teste/dsto.csv\", index=False)"
    ]
   }
  ],
