--- a/Códigos/1_trabalhoPNS.ipynb
+++ b/Códigos/1_trabalhoPNS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b75cf1b1",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d10905da",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,12 @@
     "                        'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060', 'M001', 'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', \n",
     "                        'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P00104', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02601', 'P027', 'P02801', 'P029', 'P035', 'P03701', 'P03702',\n",
     "                        'P04501', 'P04502', 'P050', 'P051', 'P052', 'P053', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', 'Q00201', 'Q03001', 'Q060', 'Q06306', \n",
-    "                        'Q068', 'Q11006', 'Q128', 'T001', 'H003', 'H004', 'H010']\n"
+    "                        'Q068', 'Q11006', 'Q128', 'R034', 'T001', 'H003', 'H004', 'H010']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "5cfcc85c",
    "metadata": {},
    "outputs": [
@@ -575,6 +575,11 @@
          "type": "float"
         },
         {
+         "name": "R034",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
          "name": "T001",
          "rawType": "float64",
          "type": "float"
@@ -596,7 +601,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2f5a50eb-7e76-4a12-8d3c-8af6e4c36e91",
+       "ref": "61f1e16a-e3b4-4004-9de9-5ac7fcd4a324",
        "rows": [
         [
          "0",
@@ -705,6 +710,7 @@
          "2.0",
          "2.0",
          "2.0",
+         null,
          "2.0",
          "2.0",
          "1.0",
@@ -765,6 +771,7 @@
          "1.0",
          "1.0",
          "2.0",
+         null,
          null,
          null,
          null,
@@ -932,6 +939,7 @@
          null,
          null,
          null,
+         null,
          null
         ],
         [
@@ -989,6 +997,7 @@
          null,
          "1.0",
          "2.0",
+         null,
          null,
          null,
          null,
@@ -1156,11 +1165,12 @@
          null,
          null,
          null,
+         null,
          null
         ]
        ],
        "shape": {
-        "columns": 109,
+        "columns": 110,
         "rows": 5
        }
       },
@@ -1194,12 +1204,12 @@
        "      <th>C00301</th>\n",
        "      <th>C006</th>\n",
        "      <th>...</th>\n",
-       "      <th>Q03001</th>\n",
        "      <th>Q060</th>\n",
        "      <th>Q06306</th>\n",
        "      <th>Q068</th>\n",
        "      <th>Q11006</th>\n",
        "      <th>Q128</th>\n",
+       "      <th>R034</th>\n",
        "      <th>T001</th>\n",
        "      <th>H003</th>\n",
        "      <th>H004</th>\n",
@@ -1220,12 +1230,12 @@
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1329,7 +1339,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 109 columns</p>\n",
+       "<p>5 rows × 110 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1340,17 +1350,17 @@
        "3     11  1110011  110000016          1      1      1      1   1.0     4.0   \n",
        "4     11  1110011  110000016          1      1      1      1   1.0     5.0   \n",
        "\n",
-       "   C006  ...  Q03001  Q060  Q06306  Q068  Q11006  Q128  T001  H003  H004  H010  \n",
-       "0   2.0  ...     2.0   1.0     2.0   2.0     2.0   2.0   2.0   2.0   1.0   3.0  \n",
-       "1   1.0  ...     NaN   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "2   1.0  ...     NaN   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "3   1.0  ...     NaN   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "4   2.0  ...     NaN   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "   C006  ...  Q060  Q06306  Q068  Q11006  Q128  R034  T001  H003  H004  H010  \n",
+       "0   2.0  ...   1.0     2.0   2.0     2.0   2.0   NaN   2.0   2.0   1.0   3.0  \n",
+       "1   1.0  ...   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "2   1.0  ...   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3   1.0  ...   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "4   2.0  ...   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "\n",
-       "[5 rows x 109 columns]"
+       "[5 rows x 110 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "c60cb62d",
    "metadata": {},
    "outputs": [],
@@ -1405,7 +1415,6 @@
     "## tirei o P058\n",
     "# 'P05901', 'P05902', 'P05903', 'P05904'\n",
     "# 'Q00101', 'Q02901', 'Q05901'\n",
-    "# 'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311' ***************************************checar!\n",
     "# 'R031', 'R032', 'R033'\n",
     "# 'R010', 'R025', 'R028', 'R029', 'R030'\n",
     "# 'H001', 'H002'\n",
@@ -1418,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "ea8120b5",
    "metadata": {},
    "outputs": [],
@@ -1428,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "faf47262",
    "metadata": {},
    "outputs": [],
@@ -1460,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5d235358",
    "metadata": {},
    "outputs": [],
@@ -1471,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f59adb64",
    "metadata": {},
    "outputs": [],
@@ -1492,17 +1501,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9b940021",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nColunas adicionadas: \\n\\n'D00201', 'D00301', 'D008',\\n'E001', 'E002', 'E003', 'E004', 'E005',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311',\\n'H001', 'H002',\\n\""
+       "\"\\nColunas adicionadas: \\n\\n'D00201', 'D00301', 'D008',\\n'E001', 'E002', 'E003', 'E004', 'E005',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'H001', 'H002',\\n\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1521,7 @@
     "base_sem_outliers = base_sem_outliers.merge(\n",
     "    pns2019[['chave_pessoa', 'D00201', 'D00301', 'D008', 'E001', 'E002', 'E003', 'E004', 'E005', 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
     "             'I00103', 'I001031', 'N00101', 'P00103', 'P00403', 'P034', 'P05901', 'P05902', 'P05903', 'P05904', 'Q00101', 'Q02901', \n",
-    "             'Q05901', 'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311', 'H001', 'H002',]],\n",
+    "             'Q05901', 'H001', 'H002',]],\n",
     "    on='chave_pessoa',\n",
     "    how='left' # ou 'right', 'inner', 'outer' conforme necessidade\n",
     ")\n",
@@ -1529,14 +1538,23 @@
     "'P034',\n",
     "'P05901', 'P05902', 'P05903', 'P05904',\n",
     "'Q00101', 'Q02901', 'Q05901'\n",
-    "'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311',\n",
     "'H001', 'H002',\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "3865d545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_sem_outliers = base_sem_outliers.drop(columns=['V0024', 'UPA_PNS', 'V0006_PNS', 'chave_pessoa'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "bb7fde0b",
    "metadata": {},
    "outputs": [],
